establish baseline for contact me section and fix header component alignment (the "contact me" section skewed it)

--- a/www.micahnorwoodjordan.com/src/components/about-page/about-page.component.css
+++ b/www.micahnorwoodjordan.com/src/components/about-page/about-page.component.css
@@ -2,6 +2,7 @@
 .contact-me-header { font-size: 70px; font-weight: 400; color: white; }
 .contact-me-section { width: 100%; height:65vh; background-color: #219d51; }
 .image { width: 55%; height: auto; }
+.image-mobile { width: 80vw; height: 40vh; }
 .content { font-size: 20px; font-weight: 400; }
 .contact-me-content { color: white }
 
